Exercício em desenvolvimento

--- a/index.html
+++ b/index.html
@@ -9,8 +9,14 @@
 <body>
     <div id="background">
         <main>
-            <h1>HENRY KASAI</h1>
-            <hr>
+            <hr class="início">
+            <h1 class="início">HENRY</h1>
+            <hr id="inteiro">
+            <h1 class="fim">KASAI</h1>
+            <hr class="fim">
+            <div id="imagem">
+                <img src="imagem.jpg" alt="Foto de Henry Kasai">
+            </div>  
         </main>
     </div>
 </body>
