Exercício em desenvolvimento

--- a/index.html
+++ b/index.html
@@ -5,19 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Website</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
 </head>
 <body>
     <div id="background">
-        <main>
-            <hr class="início">
-            <h1 class="início">HENRY</h1>
-            <hr id="inteiro">
-            <h1 class="fim">KASAI</h1>
-            <hr class="fim">
-            <div id="imagem">
-                <img src="imagem.jpg" alt="Foto de Henry Kasai">
-            </div>  
-        </main>
+        <div class="borda">
+            <main>
+                <div id="content">
+                    <span class="borda">
+                        <img src="imagem.jpg" alt="Foto de Henry Kasai">
+                    </span>
+                </div>  
+                <h1>HENRY KASAI</h1>  
+                <span id="profissão">Developer</span>
+                <div id="línguas">
+                    <span class="bordaspan">C#</span>
+                    <span class="bordaspan">HTML</span>
+                    <span class="bordaspan">CSS</span>
+                </div>
+                <a id="contact" href="">Contact Me</a>
+                <div id="contatos">       
+                    <a href=""><i id="twitter" class="fab fa-twitter-square fa-3x"></i> </a>
+                    <a href=""><i id="facebook" class="fab fa-facebook-square fa-3x"></i></a>
+                    <a href=""><i id="instagram" class="fab fa-instagram fa-3x"></i></a>
+                    <a href=""><i id="github" class="fab fa-github-square fa-3x"></i></a>
+                </div>
+            </main>
+        </div>  
     </div>
 </body>
 </html>
