--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
                     <span class="bordaspan">HTML</span>
                     <span class="bordaspan">CSS</span>
                 </div>
-                <a id="contact" href="">Contact Me</a>
+                <a id="contact" href="mailto:henrykasai1775@gmail.com">Contact Me</a>
                 <div id="contatos">       
-                    <a href=""><i id="twitter" class="fab fa-twitter-square fa-3x"></i> </a>
-                    <a href=""><i id="facebook" class="fab fa-facebook-square fa-3x"></i></a>
-                    <a href=""><i id="instagram" class="fab fa-instagram fa-3x"></i></a>
-                    <a href=""><i id="github" class="fab fa-github-square fa-3x"></i></a>
+                    <a href="https://twitter.com/henrykasai1775" target="_blank"><i id="twitter" class="fab fa-twitter-square fa-3x"></i> </a>
+                    <a href="https://www.facebook.com/henry.kasai.5" target="_blank"><i id="facebook" class="fab fa-facebook-square fa-3x"></i></a>
+                    <a href="https://www.instagram.com/henry_kasai/?hl=pt-br" target="_blank"><i id="instagram" class="fab fa-instagram fa-3x"></i></a>
+                    <a href="https://github.com/HenryKasai" target="_blank"><i id="github" class="fab fa-github-square fa-3x"></i></a>
                 </div>
             </main>
         </div>  
