--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <div id="línguas">
                     <span class="bordaspan">C#</span>
                     <span class="bordaspan">HTML</span>
-                    <span class="bordaspan">CSS</span>
+                    <span class="bordaspan">CS</span>
                 </div>
                 <a id="contact" href="mailto:henrykasai1775@gmail.com">Contact Me</a>
                 <div id="contatos">       
